--- a/locations/templates/locations/search_form.html
+++ b/locations/templates/locations/search_form.html
@@ -12,7 +12,7 @@
       <button type="submit" class="btn btn-info btn-lg btn-block">Search</button>
     </form>
   </div>
-  <a class="btn btn-medium" href="{% url 'sites' %}" role="button">Go to Reviews</a>
+  <a class="btn btn-medium" href="{% url 'sites' %}" role="button">Go to Reviews & Notes</a>
   <a class="btn btn-medium" href="{% url 'logout' %}" role="button">Logout</a>
 </div>
 {% endblock %}
