--- a/locations/templates/sites/base.html
+++ b/locations/templates/sites/base.html
@@ -11,7 +11,7 @@
       <a class="navbar-brand mb-o h1" href="/">Electric Vehicle charging stations in the US</a>
     </nav>
     <div class="alert alert-primary p-3 m-5" role="alert">
-      <b>Reviews</b>
+      <b>Reviews & Notes</b>
     </div>
     <div class="content container">
       <div class="row">
