--- a/locations/templates/sites/sites.html
+++ b/locations/templates/sites/sites.html
@@ -1,4 +1,4 @@
-{% extends 'sites_reviews/base.html' %}
+{% extends 'sites/base.html' %}
 
 {% block content %}
   {% for site in all_sites %}
@@ -9,5 +9,6 @@
   <hr>
   <a class="btn btn-medium" href="{% url 'new_site' %}" role="button">Create New Site</a>
   <a class="btn btn-medium" href="{% url 'reviews' %}" role="button">View All Reviews</a>
+  <a class="btn btn-medium" href="{% url 'notes' %}" role="button">View All Notes</a>
   <a class="btn btn-medium" href="{% url 'logout' %}" role="button">Logout</a>
   {% endblock %}
