--- a/locations/templates/sites/site_detail.html
+++ b/locations/templates/sites/site_detail.html
@@ -28,4 +28,5 @@
   <a class="btn btn-medium" href="{% url 'new_note' site_id=site.id %}" role="button">Create New {{ site.name }} Note</a>
   <a class="btn btn-medium" href="{% url 'sites' %}" role="button">Back</a>
   <a class="btn btn-medium" href="{% url 'logout' %}" role="button">Logout</a>
+  <a class="btn btn-medium" href="{% url 'search_form' %}" role="button">Back to search</a>
 {% endblock %}
