--- a/locations/templates/sites/sites.html
+++ b/locations/templates/sites/sites.html
@@ -11,4 +11,5 @@
   <a class="btn btn-medium" href="{% url 'reviews' %}" role="button">View All Reviews</a>
   <a class="btn btn-medium" href="{% url 'notes' %}" role="button">View All Notes</a>
   <a class="btn btn-medium" href="{% url 'logout' %}" role="button">Logout</a>
+  <a class="btn btn-medium" href="{% url 'search_form' %}" role="button">Back to search</a>
   {% endblock %}
