--- a/locations/templates/sites/review_detail.html
+++ b/locations/templates/sites/review_detail.html
@@ -9,4 +9,5 @@
   </form>
   <a class="btn btn-medium" href="{% url 'sites' %}" role="button">Back</a>
   <a class="btn btn-medium" href="{% url 'logout' %}" role="button">Logout</a>
+  <a class="btn btn-medium" href="{% url 'search_form' %}" role="button">Back to search</a>
 {% endblock %}
